--- a/project pages/zoomagazin.html
+++ b/project pages/zoomagazin.html
@@ -84,7 +84,6 @@
     </div>
     <div class="mod" id="registrationModal">
       <div class="mod-content">
-        <span class="clos">&times;</span>
         <h2>Регистрация</h2>
         <form id="registrationForm">
           <div class="input-group">
@@ -171,7 +170,6 @@
 
     <div class="mod" id="loginModal">
       <div class="mod-content">
-        <span class="clos">&times;</span>
         <h2>Авторизация</h2>
         <form id="loginForm">
           <div class="input-group">
@@ -402,43 +400,48 @@
 }
 
       //авторизация регистрация
-      document.addEventListener("DOMContentLoaded", function () {
+    document.addEventListener("DOMContentLoaded", function () {
     const registrationModal = document.getElementById("registrationModal");
     const loginModal = document.getElementById("loginModal");
     const openRegistrationButton = document.getElementById("openRegistration");
     const openLoginButton = document.getElementById("openLogin");
-    const closeButtons = document.querySelectorAll(".close");
-    const registrationForm = document.getElementById("registrationForm");
-    const loginForm = document.getElementById("loginForm");
+    const body = document.body;
 
-    // Открытие модальных окон
     openRegistrationButton.addEventListener("click", function () {
         registrationModal.style.display = "block";
+        body.classList.add("no-scroll");
     });
 
     openLoginButton.addEventListener("click", function () {
         loginModal.style.display = "block";
+        body.classList.add("no-scroll");
     });
 
-    // Закрытие модальных окон
-    closeButtons.forEach(function (button) {
-        button.addEventListener("click", function () {
-            const modal = button.closest(".modal");
-            if (modal) {
-                modal.style.display = "none"; // Закрываем только родительскую модалку
-            }
-        });
-    });
-
-    // Закрытие модальных окон при клике вне окна
     window.addEventListener("click", function (event) {
         if (event.target === registrationModal) {
             registrationModal.style.display = "none";
+            body.classList.remove("no-scroll");
         }
         if (event.target === loginModal) {
             loginModal.style.display = "none";
+            body.classList.remove("no-scroll");
         }
     });
+
+    // Закрытие модальных окон по нажатию клавиши ESC
+    document.addEventListener("keydown", function (event) {
+        if (event.key === "Escape") {
+            if (registrationModal.style.display === "block") {
+                registrationModal.style.display = "none";
+                body.classList.remove("no-scroll");
+            }
+            if (loginModal.style.display === "block") {
+                loginModal.style.display = "none";
+                body.classList.remove("no-scroll");
+            }
+        }
+    });
+});
 
     // Валидация формы регистрации
     registrationForm.addEventListener("submit", function (event) {
